fixed paragraph cut off point at smaller screen sizes

--- a/index.css
+++ b/index.css
@@ -215,6 +215,39 @@ body {
   }
 }
 
+@media (max-width: 715px) and (min-width: 481px) {
+  #paragraphMainContainer {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  #topContainer {
+    flex-direction: column;
+    height: auto;
+  }
+
+  #textDiv {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    height: auto;
+  }
+
+  #aboutDiv {
+    margin-bottom: 20px;
+  }
+
+  #bottomContainer {
+    flex-direction: column;
+    margin-top: 40px;
+  }
+
+  #bottomContainer ul {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+}
+
 @media (max-width: 480px) {
   body {
     display: flex;
@@ -241,15 +274,16 @@ body {
   }
 
   #topContainer {
-    flex-direction: row;
-    height: 1250px;
+    flex-direction: column;
+    height: auto;
     /* border: 1px solid black; */
   }
 
   #textDiv {
     font-size: 16px;
-    margin-left: 60px;
-    margin-right: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
   }
 
   #bottomContainer {
@@ -260,6 +294,10 @@ body {
 
   #personalNotesDiv {
     margin-bottom: 10px;
+  }
+
+  #aboutDiv {
+    margin-bottom: 20px;
   }
 
   #bottomContainer ul {
@@ -292,7 +330,7 @@ body {
 
     #topContainer {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       width: 100%;
       justify-content: space-between;
       height: auto;
@@ -301,21 +339,23 @@ body {
 
     #textDiv {
       font-size: 16px;
-      height: 1200px;
-      margin-left: 40px;
+      height: auto;
+      margin-left: 0;
       margin-right: 0;
       padding-left: 0;
       padding-right: 0;
+      width: 100%;
     }
 
     #aboutDiv {
       left: 0;
       margin-top: 20px;
+      margin-bottom: 20px;
     }
 
     #bottomContainer {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: space-between;
       width: 100%;
       margin-top: 20px;
@@ -323,9 +363,10 @@ body {
 
     #bottomContainer ul {
       font-size: 18px;
-      margin-left: 40px;
+      margin-left: 0;
       margin-right: 0;
       padding-left: 0;
+      margin-top: 20px;
     }
 
     #thanksH4 {
